fix: issue with contrast in active class for navigation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,7 +237,7 @@ header {
 }
 
 .menu .active {
-    color: #919F93;
+    color: #6F8472;
 }
 
 #footer-navigation .active {
